Make permissions explicit and precise (#102)
* Make managed policies and define explicitly for lambdas. Add policy SecretsManagerPolicy for FetchNviInstitutionReportProxyHandler

* Remove roles

* Fix policy name syntax

* Fix PolicyDocument syntax

* Rename policies inlined in functions

* Remove empty object VPCAccessPolicy

* Remove inline policies

* Fix DeleteS3ObjectPolicy

--- a/template.yaml
+++ b/template.yaml
@@ -112,107 +112,86 @@ Resources:
     Properties:
       LogGroupName: !Sub '/aws/lambda/${DataLoadingHandler}'
       RetentionInDays: 5
-  # ---- Lambda ----
 
-  LambdaRole:
-    Type: AWS::IAM::Role
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: 2012-10-17
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service: [ lambda.amazonaws.com ]
-            Action: [ 'sts:AssumeRole' ]
-      Policies:
-        - PolicyName: readSecret
-          PolicyDocument:
-            Version: '2012-10-17'
-            Statement:
-              - Effect: Allow
-                Action:
-                  - secretsmanager:GetSecretValue
-                Resource:
-                  - !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:BackendCognitoClientCredentials-*"
-        - PolicyName: readFromS3
-          PolicyDocument:
-            Version: 2012-10-17
-            Statement:
-              - Effect: Allow
-                Action:
-                  - s3:Get*
-                  - s3:List*
-                  - s3:PutObject
-                  - events:*
-                Resource: '*'
-        - PolicyName: neptuneAccessPolicy
-          PolicyDocument:
-            Version: 2012-10-17
-            Statement:
-              - Effect: Allow
-                Action:
-                  - neptune-db:*
-                Resource:
-                  - !Sub 'arn:aws:neptune-db:${AWS::Region}:${AWS::AccountId}:cluster:${ProjectName}/*'
-        - PolicyName: queuePolicy
-          PolicyDocument:
-            Version: 2012-10-17
-            Statement:
-              - Effect: Allow
-                Action:
-                  - sqs:ReceiveMessage
-                  - sqs:DeleteMessage
-                  - sqs:SendMessage
-                  - sqs:GetQueueAttributes
-                Resource:
-                  - !GetAtt DataLoadingDLQ.Arn
-        - PolicyName: writeLog
-          PolicyDocument:
-            Version: 2012-10-17
-            Statement:
-              - Effect: Allow
-                Action:
-                  - logs:CreateLogGroup
-                  - logs:CreateLogStream
-                  - logs:PutLogEvents
-                Resource: !Sub 'arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:*:*'
-        - PolicyName: invokeFunction
-          PolicyDocument:
-            Version: 2012-10-17
-            Statement:
-              - Effect: Allow
-                Action:
-                  - lambda:InvokeFunction
-                Resource: '*'
-        - PolicyName: deployToVpnPolicy
-          PolicyDocument:
-            Version: 2012-10-17
-            Statement:
-              - Effect: Allow
-                Action:
-                  - ec2:DescribeNetworkInterfaces
-                  - ec2:CreateNetworkInterface
-                  - ec2:DeleteNetworkInterface
-                  - ec2:DescribeInstances
-                  - ec2:AttachNetworkInterface
-                Resource: '*'
+  # ---- Policies ----
 
-  DefaultLambdaPermissions:
-    Type: AWS::IAM::Policy
+  SecretsManagerPolicy:
+    Type: AWS::IAM::ManagedPolicy
     Properties:
-      PolicyName: !Sub DefaultLambdaPermissions-${AWS::StackName}
-      Roles:
-        - !Ref LambdaRole
       PolicyDocument:
         Version: '2012-10-17'
         Statement:
           - Effect: Allow
             Action:
-              - logs:CreateLogGroup
-              - logs:CreateLogStream
-              - logs:PutLogEvents
-              - lambda:InvokeFunction
-            Resource: "*"
+              - secretsmanager:GetSecretValue
+            Resource:
+              - !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:BackendCognitoClientCredentials-*"
+
+  DeleteS3ObjectPolicy:
+    Type: AWS::IAM::ManagedPolicy
+    Properties:
+      PolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Action:
+              - 's3:DeleteObject'
+            Resource:
+              - !GetAtt KeyBatchesBucket.Arn
+
+  S3ManagedPolicy:
+    Type: AWS::IAM::ManagedPolicy
+    Properties:
+      PolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Action:
+              - s3:Get*
+              - s3:List*
+              - s3:PutObject
+              - events:*
+            Resource: '*'
+
+  NeptuneManagedPolicy:
+    Type: AWS::IAM::ManagedPolicy
+    Properties:
+      PolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Action:
+              - neptune-db:*
+            Resource:
+              - !Sub 'arn:aws:neptune-db:${AWS::Region}:${AWS::AccountId}:cluster:${ProjectName}/*'
+  SqsManagedPolicy:
+    Type: AWS::IAM::ManagedPolicy
+    Properties:
+      PolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Action:
+              - sqs:ReceiveMessage
+              - sqs:DeleteMessage
+              - sqs:SendMessage
+              - sqs:GetQueueAttributes
+            Resource:
+              - !GetAtt DataLoadingDLQ.Arn
+  DeployToVpnPolicy:
+    Type: AWS::IAM::ManagedPolicy
+    Properties:
+      PolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Action:
+              - ec2:DescribeNetworkInterfaces
+              - ec2:CreateNetworkInterface
+              - ec2:DeleteNetworkInterface
+              - ec2:DescribeInstances
+              - ec2:AttachNetworkInterface
+            Resource: '*'
 
   InvokeLambdaPermission:
     Type: AWS::Lambda::Permission
@@ -300,6 +279,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: report-api
+      Handler: no.sikt.nva.data.report.api.fetch.FetchDataReport::handleRequest
       VpcConfig:
         SecurityGroupIds:
           - !Ref LambdaSecurityGroup
@@ -307,9 +287,8 @@ Resources:
           - !Ref LambdaSubnet1
           - !Ref LambdaSubnet2
       Policies:
-        - VPCAccessPolicy: { }
-      Handler: no.sikt.nva.data.report.api.fetch.FetchDataReport::handleRequest
-      Role: !GetAtt LambdaRole.Arn
+        - !GetAtt NeptuneManagedPolicy.PolicyArn
+        - !GetAtt DeployToVpnPolicy.PolicyArn
       Timeout: 600
       MemorySize: 1536
       AutoPublishAlias: live
@@ -327,6 +306,7 @@ Resources:
   FetchNviInstitutionReportHandler:
     Type: AWS::Serverless::Function
     Properties:
+      Handler: no.sikt.nva.data.report.api.fetch.FetchNviInstitutionReport::handleRequest
       CodeUri: report-api
       VpcConfig:
         SecurityGroupIds:
@@ -335,16 +315,14 @@ Resources:
           - !Ref LambdaSubnet1
           - !Ref LambdaSubnet2
       Policies:
-        - VPCAccessPolicy: { }
-      Handler: no.sikt.nva.data.report.api.fetch.FetchNviInstitutionReport::handleRequest
-      Role: !GetAtt LambdaRole.Arn
+        - !GetAtt NeptuneManagedPolicy.PolicyArn
+        - !GetAtt DeployToVpnPolicy.PolicyArn
       Timeout: 600
       MemorySize: 1536
       AutoPublishAlias: live
       Environment:
         Variables:
           ALLOWED_ORIGIN: '*'
-          COGNITO_HOST: !Ref CognitoAuthorizationUri
       Events:
         ApiEvent:
           Type: Api
@@ -358,7 +336,8 @@ Resources:
     Properties:
       CodeUri: report-api
       Handler: no.sikt.nva.data.report.api.fetch.FetchNviInstitutionReportProxy::handleRequest
-      Role: !GetAtt LambdaRole.Arn
+      Policies:
+        - !GetAtt SecretsManagerPolicy.PolicyArn
       Timeout: 600
       MemorySize: 1536
       AutoPublishAlias: live
@@ -378,6 +357,7 @@ Resources:
   DataLoadingHandler:
     Type: AWS::Serverless::Function
     Properties:
+      Handler: no.sikt.nva.data.report.api.etl.SingleObjectDataLoader::handleRequest
       CodeUri: data-loading
       VpcConfig:
         SecurityGroupIds:
@@ -386,9 +366,10 @@ Resources:
           - !Ref LambdaSubnet1
           - !Ref LambdaSubnet2
       Policies:
-        - VPCAccessPolicy: { }
-      Handler: no.sikt.nva.data.report.api.etl.SingleObjectDataLoader::handleRequest
-      Role: !GetAtt LambdaRole.Arn
+        - !GetAtt S3ManagedPolicy.PolicyArn
+        - !GetAtt NeptuneManagedPolicy.PolicyArn
+        - !GetAtt SqsManagedPolicy.PolicyArn
+        - !GetAtt DeployToVpnPolicy.PolicyArn
       Timeout: 600
       MemorySize: 1536
       AutoPublishAlias: live
@@ -403,11 +384,11 @@ Resources:
             Type: SQS
             Destination: !GetAtt DataLoadingDLQ.Arn
 
-
   BulkDataLoader:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: bulk-load
+      Handler: no.sikt.nva.data.report.api.etl.loader.BulkLoadHandler::handleRequest
       VpcConfig:
         SecurityGroupIds:
           - !Ref LambdaSecurityGroup
@@ -415,8 +396,9 @@ Resources:
           - !Ref LambdaSubnet1
           - !Ref LambdaSubnet2
       Policies:
-        - VPCAccessPolicy: { }
-      Handler: no.sikt.nva.data.report.api.etl.loader.BulkLoadHandler::handleRequest
+        - !GetAtt S3ManagedPolicy.PolicyArn
+        - !GetAtt NeptuneManagedPolicy.PolicyArn
+        - !GetAtt DeployToVpnPolicy.PolicyArn
       Timeout: 600
       MemorySize: 1536
       AutoPublishAlias: live
@@ -432,6 +414,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: database-tools
+      Handler: no.sikt.nva.data.report.dbtools.DatabaseResetHandler::handleRequest
       VpcConfig:
         SecurityGroupIds:
           - !Ref LambdaSecurityGroup
@@ -439,9 +422,8 @@ Resources:
           - !Ref LambdaSubnet1
           - !Ref LambdaSubnet2
       Policies:
-        - VPCAccessPolicy: { }
-      Handler: no.sikt.nva.data.report.dbtools.DatabaseResetHandler::handleRequest
-      Role: !GetAtt LambdaRole.Arn
+        - !GetAtt NeptuneManagedPolicy.PolicyArn
+        - !GetAtt DeployToVpnPolicy.PolicyArn
       Timeout: 600
       MemorySize: 1536
       AutoPublishAlias: live
@@ -453,7 +435,8 @@ Resources:
     Properties:
       CodeUri: bulk-load
       Handler: no.sikt.nva.data.report.api.etl.transformer.GenerateKeyBatchesHandler::handleRequest
-      Role: !GetAtt LambdaRole.Arn
+      Policies:
+        - !GetAtt S3ManagedPolicy.PolicyArn
       Timeout: 600
       MemorySize: 1536
       AutoPublishAlias: live
@@ -477,19 +460,12 @@ Resources:
     Properties:
       CodeUri: bulk-load
       Handler: no.sikt.nva.data.report.api.etl.transformer.BulkTransformerHandler::handleRequest
-      Role: !GetAtt LambdaRole.Arn
       Timeout: 600
       MemorySize: 1536
       AutoPublishAlias: live
       Policies:
-        - Version: '2012-10-17'
-          Statement:
-            - Effect: Allow
-              Action:
-                - 's3:DeleteObject'
-              Resource:
-                - !Ref KeyBatchesBucket
-                - !Sub '${KeyBatchesBucket.Arn}/*'
+        - !GetAtt S3ManagedPolicy.PolicyArn
+        - !GetAtt DeleteS3ObjectPolicy.PolicyArn
       Environment:
         Variables:
           EVENT_BUS: !GetAtt BatchLoadEventBus.Name
