--- a/data-loading/build.gradle
+++ b/data-loading/build.gradle
@@ -31,5 +31,5 @@ repositories {
 
 test {
     environment('QUERY_PATH', 'gsp/sparql')
-    environment('API_HOST', 'example.org')
+    environment('API_HOST', 'https://example.org')
 }
