--- a/data-report-commons/build.gradle
+++ b/data-report-commons/build.gradle
@@ -20,5 +20,5 @@ repositories {
 
 test {
     environment("QUERY_PATH", "gsp/sparql")
-    environment('API_HOST', 'https://example.org')
+    environment('API_HOST', 'example.org')
 }
