--- a/template.yaml
+++ b/template.yaml
@@ -90,6 +90,17 @@ Globals:
 Resources:
 
   # ---- SQS ----
+  BulkTransformerQueue:
+    Type: AWS::SQS::Queue
+    Properties:
+      RedrivePolicy:
+        deadLetterTargetArn: !GetAtt BulkTransformerQueueDLQ.Arn
+        maxReceiveCount: 5
+  # ---- DLQs ----
+  BulkTransformerQueueDLQ:
+    Type: AWS::SQS::Queue
+    Properties:
+      MessageRetentionPeriod: 1209600 #14 days
   DataReportPersistedResourceDLQ:
     Type: AWS::SQS::Queue
     Properties:
@@ -468,20 +479,21 @@ Resources:
         - !GetAtt DeleteS3ObjectPolicy.PolicyArn
       Environment:
         Variables:
-          EVENT_BUS: !GetAtt BatchLoadEventBus.Name
           EXPANDED_RESOURCES_BUCKET: !Ref ResourcesBucket
           KEY_BATCHES_BUCKET: !Ref KeyBatchesBucket
           LOADER_BUCKET: !Ref LoaderBucket
-          TOPIC: 'ReportApi.Bulk.TransformKeyBatch'
           API_HOST: !Ref ApiDomain
+          BULK_TRANSFORMER_QUEUE_URL: !Ref BulkTransformerQueue
       Events:
-        BatchIndexEvent:
-          Type: EventBridgeRule
+        SqsEvent:
+          Type: SQS
           Properties:
-            EventBusName: !GetAtt BatchLoadEventBus.Name
-            Pattern:
-              detail:
-                topic: [ 'ReportApi.Bulk.TransformKeyBatch' ]
+            Queue: !GetAtt BulkTransformerQueue.Arn
+      EventInvokeConfig:
+        DestinationConfig:
+          OnFailure:
+            Type: SQS
+            Destination: !GetAtt BulkTransformerQueueDLQ.Arn
 
   # ---- Amazon Neptune ----
   # Two instance Amazon Neptune cluster, using default
