--- a/template.yaml
+++ b/template.yaml
@@ -105,6 +105,10 @@ Resources:
     Type: AWS::SQS::Queue
     Properties:
       MessageRetentionPeriod: 1209600 #14 days
+  GenerateKeyBatchesDLQ:
+    Type: AWS::SQS::Queue
+    Properties:
+      MessageRetentionPeriod: 1209600 #14 days
   DataLoadingDLQ:
     Type: AWS::SQS::Queue
     Properties:
@@ -465,6 +469,11 @@ Resources:
             Pattern:
               detail:
                 topic: [ 'ReportApi.Bulk.KeyBasedBatch' ]
+      EventInvokeConfig:
+        DestinationConfig:
+          OnFailure:
+            Type: SQS
+            Destination: !GetAtt GenerateKeyBatchesDLQ.Arn
 
   BulkTransformerHandler:
     Type: AWS::Serverless::Function
