Set BulkTransformerHandler timeout to 5 minutes. Set BulkTransformerQueue visibility timeout to 5 minutes.

--- a/template.yaml
+++ b/template.yaml
@@ -93,6 +93,7 @@ Resources:
   BulkTransformerQueue:
     Type: AWS::SQS::Queue
     Properties:
+      VisibilityTimeout: 300
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt BulkTransformerQueueDLQ.Arn
         maxReceiveCount: 5
@@ -475,6 +476,7 @@ Resources:
     Properties:
       CodeUri: bulk-load
       Handler: no.sikt.nva.data.report.api.etl.transformer.BulkTransformerHandler::handleRequest
+      Timeout: 300
       MemorySize: 1536
       AutoPublishAlias: live
       Policies:
