Make BulkTransformerHandler RequestHandler, not EventHandler

--- a/testing-utils/build.gradle
+++ b/testing-utils/build.gradle
@@ -5,6 +5,7 @@ plugins {
 dependencies {
     implementation(project(':data-report-commons'))
     implementation libs.jena.fuseki
+    implementation libs.aws.lambda.events
 }
 
 repositories {
