--- a/bulk-load/build.gradle
+++ b/bulk-load/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     testImplementation(libs.nva.testutils) {
         exclude group: 'org.wiremock', module: 'wiremock'
     }
+    testImplementation(project(":testing-utils"))
 
     test {
         environment("API_HOST", "example.org")
