--- a/template.yaml
+++ b/template.yaml
@@ -106,6 +106,10 @@ Resources:
     Type: AWS::SQS::Queue
     Properties:
       MessageRetentionPeriod: 1209600 #14 days
+  GenerateKeyBatchesDLQ:
+    Type: AWS::SQS::Queue
+    Properties:
+      MessageRetentionPeriod: 1209600 #14 days
   DataLoadingDLQ:
     Type: AWS::SQS::Queue
     Properties:
@@ -193,6 +197,7 @@ Resources:
               - !GetAtt BulkTransformerQueue.Arn
               - !GetAtt BulkTransformerQueueDLQ.Arn
               - !GetAtt DataReportPersistedResourceDLQ.Arn
+              - !GetAtt GenerateKeyBatchesDLQ.Arn
   DeployToVpnPolicy:
     Type: AWS::IAM::ManagedPolicy
     Properties:
@@ -470,6 +475,11 @@ Resources:
             Pattern:
               detail:
                 topic: [ 'ReportApi.Bulk.KeyBasedBatch' ]
+      EventInvokeConfig:
+        DestinationConfig:
+          OnFailure:
+            Type: SQS
+            Destination: !GetAtt GenerateKeyBatchesDLQ.Arn
 
   BulkTransformerHandler:
     Type: AWS::Serverless::Function
