Revert "Remove Timeout property for BulkTransformerHandler"
This reverts commit fd3f4e804bb4e6a2fab379ed1fa629a7b6fe6dfb.

--- a/template.yaml
+++ b/template.yaml
@@ -471,6 +471,7 @@ Resources:
     Properties:
       CodeUri: bulk-load
       Handler: no.sikt.nva.data.report.api.etl.transformer.BulkTransformerHandler::handleRequest
+      Timeout: 600
       MemorySize: 1536
       AutoPublishAlias: live
       Policies:
