--- a/template.yaml
+++ b/template.yaml
@@ -365,7 +365,7 @@ Resources:
           COGNITO_HOST: !Ref CognitoAuthorizationUri
           BACKEND_CLIENT_SECRET_NAME: 'BackendCognitoClientCredentials'
           NVI_REPORTS_BUCKET: !Ref NviReportsBucket
-          REPORT_QUEUE_URL: !GetAtt GenerateNviInstitutionReportQueue
+          REPORT_QUEUE_URL: !Ref GenerateNviInstitutionReportQueue
           SIGN_DURATION_IN_MINUTES: 60
       Events:
         ApiEvent:
