Make page size env var.

--- a/report-api/build.gradle
+++ b/report-api/build.gradle
@@ -44,4 +44,5 @@ test {
     environment("AWS_REGION", "eu-west-1")
     environment("NVI_REPORTS_BUCKET", "nvi-reports")
     environment("SIGN_DURATION_IN_MINUTES", "60")
+    environment("GRAPH_DATABASE_PAGE_SIZE", "5")
 }
