--- a/template.yaml
+++ b/template.yaml
@@ -341,6 +341,8 @@ Resources:
       Environment:
         Variables:
           ALLOWED_ORIGIN: '*'
+          NVI_REPORTS_BUCKET: !Ref NviReportsBucket
+          GRAPH_DATABASE_PAGE_SIZE: 500
       Events:
         SqsEvent:
           Type: SQS
