Generator input type SQSEvent. Handle batch size 1

--- a/template.yaml
+++ b/template.yaml
@@ -348,6 +348,9 @@ Resources:
           Type: SQS
           Properties:
             Queue: !GetAtt GenerateNviInstitutionReportQueue.Arn
+            BatchSize: 1
+            #Note: NviInstitutionReportGenerator is implemented to handle only batch size 1.
+            #Don't change the batch size value, unless you change the implementation.
       EventInvokeConfig:
         DestinationConfig:
           OnFailure:
