--- a/report-api/build.gradle
+++ b/report-api/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation group: 'org.apache.poi', name: 'poi', version: '5.2.4'
     implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.4'
 
+    implementation libs.aws.lambda.events
     implementation libs.aws.sdk2.s3
     implementation libs.aws.sdk2.sqs
     implementation libs.aws.sdk2.apache.client
